fix(checkbox): fix alignment

--- a/src/common-ui/checkbox/checkbox.component.scss
+++ b/src/common-ui/checkbox/checkbox.component.scss
@@ -23,7 +23,6 @@
 
   &.align-top {
     .label {
-      margin-top: -2px;
     }
   }
 
